# massslitbox

./: 38K_GS_Spectra.txt  38K_meta_Spectra.txt  CMakeLists.txt  GNUmakefile  InputParameters.txt  InputParameters.txt~  MasterDragon.cc  NotesAboutModifications.txt  README.md  dragon.cc  dragon.cc~  init_vis.mac  run.mac  runParallel.py  vis.mac
include/: DetectorConstruction.hh  EventAction.hh  G4EmLivermorePhysics.hh  HornCapHit.hh  HornCapSD.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  global.hh
src/: DetectorConstruction.cc  EventAction.cc  G4EmLivermorePhysics.cc  HornCapHit.cc  HornCapSD.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  global.cc
